cfail/ui/freeze.stderr
error[E0499]: cannot borrow `q` as mutable more than once at a time
 --> $DIR/freeze.rs:7:5
  |
6 |     let (_p, mut _c) = q.split();
  |                        - first mutable borrow occurs here
7 |     q.enqueue(0).unwrap();
  |     ^ second mutable borrow occurs here
8 |     _c.dequeue();
  |     -- first borrow later used here
